--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,10 +1,15 @@
+<app-navbar></app-navbar>
+
 <div class="mt-2" align="center">
     <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
         <div class="card-header">Header</div>
         <div class="card-body">
-            <h5 class="card-title">Primary card title</h5>
+            <h5 class="card-title">{{userCorrent.name}}</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
+              <select>
+                <option [value]="option" *ngFor="let option of userCorrent.roles">{{option}}</option>
+              </select>
         </div>
     </div>
     <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
@@ -19,46 +24,6 @@
         <div class="card-header">Header</div>
         <div class="card-body">
             <h5 class="card-title">Success card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-        </div>
-    </div>
-    <div class="card text-white bg-danger mb-3" style="max-width: 18rem;">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-            <h5 class="card-title">Danger card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-        </div>
-    </div>
-    <div class="card text-dark bg-warning mb-3" style="max-width: 18rem;">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-            <h5 class="card-title">Warning card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-        </div>
-    </div>
-    <div class="card text-dark bg-info mb-3" style="max-width: 18rem;">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-            <h5 class="card-title">Info card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-        </div>
-    </div>
-    <div class="card text-dark bg-light mb-3" style="max-width: 18rem;">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-            <h5 class="card-title">Light card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-        </div>
-    </div>
-    <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-            <h5 class="card-title">Dark card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
         </div>
